# axum-liboauth2

./: .windsurfrules  Cargo.toml  Readme.md
demo/: Cargo.toml
demo/src/: handlers.rs  main.rs
demo/templates/: protected.j2
docs/: StorageSingletonPattern.md
src/: idtoken.rs  main.rs
templates/: index_anon.j2  index_user.j2
