[package]
name = "demo"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
askama = { version = "0.12.1", features = ["serde-json"] }
async-session = "3.0.0"
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
base64 = "0.22.1"
chrono = "0.4.39"
dotenv = "0.15.0"
http = "1.2.0"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

liboauth2 = { workspace = true }
